--- a/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
+++ b/app/dashboard/grooves/users-grooves/[userId]/page.module.scss
@@ -7,7 +7,7 @@
   margin-top: 10rem;
   justify-content: center;
   // width: 100%;
-  width: 100vw;
+  width: 96vw;
 }
 
 .link {
@@ -86,9 +86,17 @@
   ul {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 
     li {
+      height: 400px;
+      max-width: 250px;
       width: 65vw;
+      box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+      backdrop-filter: blur(8.4px);
+      -webkit-backdrop-filter: blur(8.4px);
+      background-color: rgba(5, 12, 32, 0.3);
       margin: 0.5rem 0;
       text-align: center;
       padding: 1.2rem 1.2rem;
@@ -105,7 +113,8 @@
       }
       img {
         border-radius: 10px;
-        width: 50vw;
+        max-height: 70vw;
+        max-width: 300px;
       }
     }
   }
