--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -65,21 +65,6 @@
 .profileImg {
   border-radius: 50%;
 }
-.footer {
-  border-top: solid 1.2px rgb(255, 255, 255);
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  display: flex;
-  margin: 0;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.4rem 1.2rem;
-
-  .img {
-    border-radius: 50%;
-  }
-}
 
 .searchButton {
   background: rgba(255, 255, 255, 0);
@@ -91,6 +76,11 @@
 .logo {
   z-index: 10000;
 }
+.children {
+  display: flex;
+
+  align-items: center;
+}
 //for ipad
 // @media only screen (min-width: 768px)
 //for laptop @media only screen (min-width: 1100px);
@@ -99,4 +89,54 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+// .active {
+//   border-top: solid 1.2px rgb(255, 255, 255);
+//   height: 4rem;
+//   width: 100%;
+//   position: fixed;
+//   top: 0px;
+//   transition: 0.3s linear;
+//   display: flex;
+//   justify-content: stretch;
+//   align-items: center;
+//   background-color: #ffffff;
+//   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+//   z-index: 40;
+//   box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.08);
+//   /* padding: 0 7%; */
+// }
+.hidden {
+  border-top: solid 1.2px rgb(255, 255, 255);
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: space-between;
+  // padding: 0.4rem 1.2rem;
+  z-index: 40;
+  position: fixed;
+  top: -800px;
+  transition: 0.3s linear;
+}
+.footer {
+  background-color: rgba(1, 7, 15, 0.902);
+  // border-top: solid 1.2px rgb(255, 255, 255);
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  margin: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.4rem 1.2rem;
+  z-index: 40;
+  -webkit-box-shadow: 44px 47px 19px 63px rgba(1, 7, 15, 0.902);
+  -moz-box-shadow: 44px 47px 19px 63px rgba(1, 7, 15, 0.902);
+  box-shadow: 44px 47px 19px 63px rgba(1, 7, 15, 0.902);
+  .img {
+    border-radius: 50%;
+  }
 }
