--- a/app/dashboard/grooves/participation-grooves/page.module.scss
+++ b/app/dashboard/grooves/participation-grooves/page.module.scss
@@ -5,9 +5,9 @@
   // flex-wrap: wrap;
   align-items: center;
   text-align: center;
-  margin: 10rem 0;
+  margin: 10rem auto;
   justify-content: center;
-  width: 96vw;
+  width: 100vw;
 }
 .going {
   padding: 5rem;
