--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 96vw;
-  margin-top: 6.5rem;
+  width: 100vw;
+  margin: 6.5rem auto;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
