--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,6 +1,6 @@
 .html {
   height: 100vh;
-  margin: 0px;
+  margin: auto;
   //background-color: rgba(5, 12, 32, 0.8);
   background-attachment: fixed;
   display: flex;
