--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,9 +1,9 @@
 .html {
   height: 100vh;
-  margin: 0px;
+  margin: auto;
   background-image: url('/backgroundphoto16.jpg');
   // background-color: rgba(5, 12, 32, 0.8);
-
+  // width: 100vw;
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -15,9 +15,12 @@
   background-attachment: fixed;
 
   body {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    // display: flex;
+    // flex-direction: column;
+    // //align-items: center;
+    // justify-content: center;
+    // text-align: center;
+    // margin: auto;
   }
   a,
   a:link,
@@ -59,9 +62,7 @@
     // }
   }
 }
-.children {
-  align-items: center;
-}
+
 .profileImg {
   border-radius: 50%;
 }
@@ -78,7 +79,6 @@
 }
 .children {
   display: flex;
-
   align-items: center;
 }
 //for ipad
@@ -106,30 +106,15 @@
 //   box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.08);
 //   /* padding: 0 7%; */
 // }
-.hidden {
-  border-top: solid 1.2px rgb(255, 255, 255);
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  display: flex;
-  margin: 0;
-  align-items: center;
-  justify-content: space-between;
-  // padding: 0.4rem 1.2rem;
-  z-index: 40;
-  position: fixed;
-  top: -800px;
-  transition: 0.3s linear;
-}
+
 .footer {
   background-color: rgba(1, 7, 15, 0.902);
-  // border-top: solid 1.2px rgb(255, 255, 255);
-  bottom: 0;
   position: fixed;
-  width: 100%;
+  bottom: 0;
+  width: 100vw;
   display: flex;
   margin: 0;
-  align-items: center;
+
   justify-content: space-between;
   padding: 0.4rem 1.2rem;
   z-index: 40;
