Remove loading with useState

--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -4,13 +4,12 @@
   padding: 2rem;
   padding-bottom: 5rem;
   margin-top: 5rem;
-  width: 100vw;
+  // width: 100vw;
   // height: 100vh;
 }
 
 .form {
   background-color: rgba(5, 12, 32, 0.8);
-
   color: white;
   display: inline-block;
   margin: 2rem 0;
