Add color: black; in comment input

--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -337,7 +337,7 @@
   input {
     border: solid white 1.2px;
     padding: 0.4rem;
-    color: white;
+    color: black;
     border-radius: 8px;
     height: 1.5rem;
     width: 12rem;
