--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   text-align: center;
   min-width: 300px;
+  max-width: 500px;
   box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
   backdrop-filter: blur(8.4px);
   -webkit-backdrop-filter: blur(8.4px);
@@ -86,6 +87,7 @@
   padding: 0 3rem;
   align-items: center;
   p {
+    margin: 0;
     text-align: center;
     padding-left: 0.8rem;
   }
@@ -151,8 +153,9 @@
   align-items: center;
   color: white;
   font-size: 0.8rem;
-  border-bottom: solid white 1.2px;
   padding-bottom: 1rem;
+  border-bottom: solid white 1.2px;
+
   img {
     width: 2rem;
     height: 2rem;
@@ -162,9 +165,10 @@
 .list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   justify-content: flex-end;
   align-self: flex-end;
+
   label {
     margin: 0.2rem;
     padding-left: 0.2rem;
@@ -183,24 +187,29 @@
   justify-content: center;
   letter-spacing: 0.1rem;
   text-transform: lowercase;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
   p {
     margin: 0;
+    padding-left: 0.5rem;
   }
 }
 .about {
   margin-bottom: 0;
-  letter-spacing: 0.2rem;
+  max-width: 400px;
+  h4 {
+    letter-spacing: 0.2rem;
+    padding-bottom: 1rem;
+  }
 }
 .language {
-  padding: 1rem 0;
+  padding-bottom: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-bottom: white solid 1.2px;
   p {
     margin: 0;
-    padding-left: 1rem;
+    padding-left: 0.5rem;
   }
 }
 .attendeeH4 {
