Add info to env.production

--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -5,19 +5,17 @@
   align-items: center;
   text-align: center;
   margin: 4rem 0;
-  width: 100vw;
+  // width: 100vw;
   padding-top: 2rem;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
   color: white;
-  // background-color: rgba(5, 12, 32, 0.4);
 
   p {
     margin: 0;
   }
   .fadeIn:last-of-type {
-    // border-bottom: solid white 1.2px;
     padding-bottom: 1rem;
     margin: 1rem;
   }
@@ -43,7 +41,6 @@
   backdrop-filter: blur(8.4px);
   -webkit-backdrop-filter: blur(8.4px);
   background-color: rgba(5, 12, 32, 0.3);
-  // box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
 }
 
 .form {
@@ -177,7 +174,6 @@
     width: 7rem;
     height: 2.5rem;
     border-radius: 9px;
-    // border: none;
     color: white;
     font-size: 0.8rem;
     font-weight: 400;
@@ -189,7 +185,6 @@
     width: 7rem;
     height: 2.5rem;
     border-radius: 9px;
-    // border: none;
     color: white;
     font-size: 0.8rem;
     font-weight: 400;
