--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -5,13 +5,12 @@
   align-items: center;
   text-align: center;
   margin: 4rem 0;
-  // width: 100vw;
+  width: 100vw;
   padding-top: 2rem;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
   color: white;
-
   p {
     margin: 0;
   }
@@ -89,7 +88,6 @@
 }
 
 .logout {
-  box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
   margin-bottom: 1rem;
 }
 
@@ -190,4 +188,9 @@
     font-weight: 400;
     letter-spacing: 0.2vw;
   }
+}
+// message sign from the user page
+
+.message {
+  padding-bottom: 0.5rem;
 }
