--- a/app/dashboard/grooves/my-grooves/page.module.scss
+++ b/app/dashboard/grooves/my-grooves/page.module.scss
@@ -150,7 +150,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1rem 0.2rem 0;
+  padding: 0 0.2rem 0;
   border: white 1.2px solid;
   box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
   background: rgba(2, 4, 32, 0.3);
@@ -170,7 +170,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 1rem;
+  // padding-top: 1rem;
   align-items: center;
   h3 {
     text-transform: uppercase;
@@ -221,6 +221,7 @@
   margin: 1rem 0;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 .indicators {
   display: flex;
