--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -119,10 +119,9 @@
   background-color: rgba(1, 7, 15, 0.902);
   position: fixed;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   display: flex;
   margin: 0;
-
   justify-content: space-between;
   padding: 0.4rem 1.2rem;
   z-index: 40;
