Add styling for forms

--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -38,6 +38,9 @@
     letter-spacing: 0.3rem;
   }
 }
+.going {
+  text-transform: uppercase;
+}
 .editButton {
   background: rgba(185, 179, 179, 0.1);
   border: solid rgba(255, 255, 255, 0.3) 1.2px;
