--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 4rem 0;
-  width: 100vw;
+  margin: 4rem 0 6rem;
+  width: 97vw;
   padding-top: 2rem;
   font-weight: 400;
   font-size: 1rem;
@@ -36,15 +36,15 @@
 }
 
 .card {
-  border-bottom: white 1.2px solid;
-  backdrop-filter: blur(8.4px);
-  -webkit-backdrop-filter: blur(8.4px);
-  background-color: rgba(5, 12, 32, 0.3);
+  backdrop-filter: blur(6.4px);
+  -webkit-backdrop-filter: blur(6.4px);
+  background-color: rgba(5, 12, 32, 0.5);
+  border-bottom: 1.2px solid white;
 }
 
 .form {
   width: 80vw;
-  text-align: center;
+  // text-align: left;
   align-items: center;
   padding: 1rem;
   margin: 1.6rem 0.8rem;
@@ -53,6 +53,9 @@
   font-size: 0.8rem;
   letter-spacing: 0.2vw;
 }
+.formOnEdit {
+  text-align: left;
+}
 .profileTitel {
   margin: 0;
   line-height: 0.8rem;
@@ -60,7 +63,7 @@
     margin: 0.3rem;
     font-size: 1.2rem;
     margin-bottom: -0.9rem;
-    padding-bottom: 0;
+    padding-top: 0.7rem;
   }
 }
 
@@ -71,8 +74,8 @@
   text-align: left;
 
   input {
-    margin: 1.5rem;
-    width: 80%;
+    margin: 2rem 0;
+    width: 100%;
     color: white;
     background-color: rgba(5, 12, 32, 0);
     border-bottom: solid 1.2px white;
