--- a/app/dashboard/grooves/create-groove/page.module.scss
+++ b/app/dashboard/grooves/create-groove/page.module.scss
@@ -3,13 +3,12 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  text-align: center;
   margin-top: 4rem;
   margin-bottom: 6rem;
   padding: 1.2rem;
   width: 98vw;
   color: white;
-
+  text-align: center;
   h3 {
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -52,9 +51,17 @@
 
     // border: solid rgba(255, 255, 255, 0.3) 1.2px;
   }
+  form {
+    box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+    backdrop-filter: blur(8.4px);
+    -webkit-backdrop-filter: blur(8.4px);
+    background-color: rgba(23, 34, 65, 0.3);
+    padding-bottom: 1rem;
+  }
 }
 
 .form {
+  text-align: left;
   width: 80vw;
   color: white;
   display: inline-block;
@@ -63,10 +70,6 @@
   font-size: 1rem;
   letter-spacing: 0.2vw;
   padding: 15px 40px 10px;
-  box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
-  backdrop-filter: blur(8.4px);
-  -webkit-backdrop-filter: blur(8.4px);
-  background-color: rgba(23, 34, 65, 0.3);
 
   input {
     width: 100%;
@@ -76,7 +79,7 @@
     border-top: none;
     border-right: none;
     border-left: none;
-    margin: 0.5rem;
+    padding-top: 1rem;
     color: white;
   }
 }
