--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -15,7 +15,7 @@
   font-size: 1rem;
   letter-spacing: 0.2vw;
   border: solid 1.2px white;
-  background: rgba(2, 4, 32, 0.2);
+  background-color: rgba(5, 12, 32, 0.4);
 
   padding: 0.8rem 2rem 0.5rem;
 
